# tree-sitter-objdump

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file.objdump  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-objdump.pc.in
bindings/c/tree_sitter/: tree-sitter-objdump.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_objdump/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterObjDumpTests/: TreeSitterObjDumpTests.swift
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
